# retehs

./: README.md  retehs.cabal  sandbox-init.sh
AI/: Rete.hs
AI/Rete/: Data.hs  Flow.hs  Net.hs  Print.hs  Test.hs  Tests.hs
AI/Rete/Flow/: Env.hs  Genid.hs  Symbols.hs
doc/: Activations, Tokens.dia  Relations between nodes.org  Some ideas.org
