-- Created:          2014-12-15
name:                retehs
version:             0.1.0.0
synopsis:            A transactional implementation of Rete/UL
description:         Provides a Haskell implementation of the Rete/UL
                     algorithm, as described in "Production Matching
                     for Large Learning Systems" Robert Doorenbos PhD
                     Thesis, using STM.
homepage:            https://github.com/kongra/retehs
license:             BSD3
license-file:        LICENSE
author:              Konrad Grzanek
maintainer:          kongra@gmail.com
copyright:           (c) Konrad Grzanek 2014
category:            AI, reasoning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:       -O2 -W -Wall -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options:     -fwarn-tabs

  exposed-modules:   AI.Rete.Data
                     AI.Rete.Flow
                     AI.Rete.Net

  other-extensions:  Safe
  build-depends:     base >=4.7 && <4.8,
                     stm >= 2.4.3,
                     containers >= 0.5.5.1,
                     unordered-containers >= 0.2.5.0,
                     hashable >= 1.2.2.0,
                     safe >= 0.3.8,
                     kask-base >= 0.1.0,
                     treeprint >= 0.1.0

  default-language:  Haskell2010